# carton

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
crates/carton_common/: Cargo.toml
crates/carton_common/src/: color.rs  has_position.rs  has_size.rs  has_title.rs  lib.rs  point.rs  size.rs
crates/carton_draw/: Cargo.toml
crates/carton_draw/src/: drawable.rs  drawer.rs  lib.rs
crates/carton_input/: Cargo.toml
crates/carton_input/src/: keyboard.rs  lib.rs  mouse.rs  touch.rs
crates/carton_ll/: Cargo.toml
crates/carton_macos/: Cargo.toml
crates/carton_macos/src/: lib.rs
crates/carton_platform/: Cargo.toml
crates/carton_platform/src/: lib.rs
crates/carton_provider/: Cargo.toml
crates/carton_provider/src/: lib.rs
crates/carton_view/: Cargo.toml
crates/carton_view/src/: lib.rs
crates/carton_wayland/: Cargo.toml
crates/carton_wayland/src/: lib.rs
crates/carton_web/: Cargo.toml
crates/carton_widgets/: Cargo.toml
crates/carton_widgets/src/: lib.rs
crates/carton_window/: Cargo.toml
crates/carton_window/src/: lib.rs
crates/carton_windows/: Cargo.toml
crates/carton_windows/src/: lib.rs
crates/carton_x11/: Cargo.toml
crates/carton_x11/examples/: main.rs
crates/carton_x11/src/: lib.rs  platform.rs
crates/carton_x11/src/platform/: ffi.rs  provider.rs  window.rs
crates/common/: Cargo.toml
crates/common/src/: color.rs  lib.rs  macros.rs  pos.rs  size.rs
crates/draw/: Cargo.toml
crates/draw/src/: draw_call.rs  drawer.rs  lib.rs
crates/event/: Cargo.toml
crates/event/src/: lib.rs
crates/mvvm/: Cargo.toml
crates/mvvm/src/: lib.rs  model.rs  scene.rs  view.rs  view_model.rs  widget.rs
crates/mvvm_macro/: Cargo.toml
crates/mvvm_macro/src/: lib.rs
crates/observable/: Cargo.toml
crates/observable/src/: binding.rs  lib.rs  observable.rs  observer.rs
crates/shell/: Cargo.toml  build.rs  wrapper.h
crates/shell/src/: lib.rs
crates/shell/src/connection/: mod.rs  x11.rs
crates/shell/src/window/: inner.rs  mod.rs  x11.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: flex.rs  lib.rs  text.rs  vstack.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs
examples/: hello_world.rs
src/: error.rs  lib.rs
