[package]
name = "carton"
version = "0.1.0"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2018"
description = "A modern, cross platform UI library"
documentation = "https://docs.rs/carton"
readme = "README.md"
homepage = "https://github.com/BSFishy/carton"
repository = "https://github.com/BSFishy/carton"
license = "MIT"

[features]
default = ["default_platforms", "widgets"]
default_platforms = ["windows", "macos", "x11"]

widgets = ["carton_widgets"]

windows = ["carton_shell/windows"]
macos = ["carton_shell/macos"]
x11 = ["carton_shell/x11"]
wayland = ["carton_shell/wayland"]
opengl = ["carton_shell/opengl"]
vulkan = ["carton_shell/vulkan"]

[workspace]
members = ["crates/*"]

[dependencies]
carton_common = { path = "crates/common", version = "0.1" }
carton_event = { path = "crates/event", version = "0.1" }
carton_mvvm = { path = "crates/mvvm", version = "0.1" }
carton_shell = { path = "crates/shell", version = "0.1" }

carton_widgets = { path = "crates/widgets", version = "0.1", optional = true }
