[package]
name = "carton_window"
version = "0.1.0"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carton_common = { path = "../carton_common", version = "0.1.0" }
carton_view = { path = "../carton_view", version = "0.1.0" }
