[package]
name = "carton_mvvm"
version = "0.1.0"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2018"
description = "An MVVM framework used by Carton"
documentation = "https://docs.rs/carton_mvvm"
homepage = "https://github.com/BSFishy/carton"
repository = "https://github.com/BSFishy/carton"
license = "MIT"

[dependencies]
carton_mvvm_macro = { path = "../mvvm_macro", version = "0.1" }
