[package]
name = "carton_shell"
version = "0.1.0"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2018"
description = "Platform specific backend used by Carton"
documentation = "https://docs.rs/carton_shell"
homepage = "https://github.com/BSFishy/carton"
repository = "https://github.com/BSFishy/carton"
license = "MIT"

[features]
default = ["macos", "windows", "x11"]

macos = []
wayland = []
windows = []
x11 = []

[dependencies]

[build-dependencies]
bindgen = "0.53.1"
